Committed Basic HTML and Css folder to main

--- a/Assignment.html
+++ b/Assignment.html
@@ -26,8 +26,13 @@
 		</img>
 		<p>
 		<a href="Dog.html">Picture of Akamaru</a> This is an implicit link <br>
-		<a href="https://wallpapers.com/images/featured/zoro-pictures-8nv0c0nb7rijf6z2.webp"> Coolest Character Alive</a> This is an explicit link </p>
+		<a href="https://wallpapers.com/images/featured/zoro-pictures-8nv0c0nb7rijf6z2.webp"> Coolest Character Alive</a> This is an explicit link 
+		</p>
 		<footer>this is a footer</footer>
+		<p> this is an example of a blockquote that I took from w3schools </p>
+		<blockquote cite="http://www.worldwildlife.org/who/index.html">
+			For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+		</blockquote>
 	</main>
 	
 </html>
