Made fixes to Assignment.html and related files
Fixed img in Dog.html
Removed duplicate "Home" Icon in Dog.html
Fixed video in Dog_Video.html
Fixed img in Assignment.html

--- a/Assignment.html
+++ b/Assignment.html
@@ -5,12 +5,13 @@
 		<meta charset="utf-8">
 	</head>
 	<main>
-		<nav>
-			<a href="Assignment.html">Home</a> |
-			<a href="Dog.html">Dog Picture</a> |
-			<a href="Dog_Video.html">Dog Video</a> |
-		</nav>
+		
 		<body>
+			<nav>
+				<a href="Assignment.html">Home</a> |
+				<a href="Dog.html">Dog Picture</a> |
+				<a href="Dog_Video.html">Dog Video</a> |
+			</nav>
 			<p>
 				<h1>Song List</h1>
 				<h3>Unspecified Genre Songs</h3>
@@ -21,18 +22,24 @@
 				1.(To be added) <br>
 				Here is an image (below)
 			</p>
+			
+			<img src="image1.webp">
+			</img>
+			
+			<p>
+				<a href="Dog.html">Picture of Akamaru</a> This is an implicit link <br>
+				<a href="https://wallpapers.com/images/featured/zoro-pictures-8nv0c0nb7rijf6z2.webp"> Coolest Character Alive</a> This is an explicit link 
+			</p>
+			
+			<footer>this is a footer</footer>
+			
+			<p> this is an example of a blockquote that I took from w3schools </p>
+			
+			<blockquote cite="http://www.worldwildlife.org/who/index.html">
+				For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+			</blockquote>
 		</body>
-		<img src="C:Users/18177/Documents/GitHub/HTML-and-CSS-Projects/image1.webp">
-		</img>
-		<p>
-		<a href="Dog.html">Picture of Akamaru</a> This is an implicit link <br>
-		<a href="https://wallpapers.com/images/featured/zoro-pictures-8nv0c0nb7rijf6z2.webp"> Coolest Character Alive</a> This is an explicit link 
-		</p>
-		<footer>this is a footer</footer>
-		<p> this is an example of a blockquote that I took from w3schools </p>
-		<blockquote cite="http://www.worldwildlife.org/who/index.html">
-			For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
-		</blockquote>
+		
 	</main>
 	
 </html>
