--- a/Dog.html
+++ b/Dog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<title>Image Website</title>
-	<img src="C:/Users/18177/Documents/Github/HTML-and-CSS-Projects/akamaru.jpg">
-	<a href="Assignment.html">Home Page</a>
+	<img src="akamaru.jpg">
+	
 	<nav>
 		<a href="Assignment.html">Home</a> |
 		<a href="Dog.html">Dog Picture</a> |
