--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -6,8 +6,10 @@
 	I figured out how to embed the video, but it won't play for me.
 	</p>
 	<a href="https://www.youtube.com/watch?v=ngMm87S3zdQ">Dogs Playing</a> <br> <br>
-	<iframe width="1280" height="720"
-	src=https://www.youtube.com/embed/ngMm87S3zdQ">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ngMm87S3zdQ" 
+	title="YouTube video player" frameborder="0" 
+	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+	web-share" allowfullscreen>
 	</iframe>
 	<nav>
 		<a href="Assignment.html">Home</a> |
