Push Project Folder to main
added 9 imgs
edited project\index.html

also ended up pushing HTML_Form.html and Basic_HTML_5.html to main

--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -3,5 +3,7 @@
 	<body>
 		<link rel = "stylesheet" type = "text/css" href = "Basic_CSS_2.css">
 		<p> this is a paragraph text &copy; </p>
+		<em>Emphasis</em>
+		<a href="https://learncodinganywhere.com/" target="new">The Tech Academy</a>
 	</body>
 </html>
