Push Smiley Project to Main
also added a favicon to one_page_website

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -4,6 +4,7 @@
 		<title>Replica Nike Dunks</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="./One_Page_CSS/styles.css">
+		<link rel="icon" type="image/x-icon" href="./images/favicon/icon_G.png">
 	</head>
 	
 	<body>
