--- a/code-errors.html
+++ b/code-errors.html
@@ -17,13 +17,13 @@
 
         <p><a href="learncodinganywhere.com/">This is The Tech Academy's website.</a></p>
 
-        <img
+        <img style="border-style: dashed; border-width: 1px; border-color: red;"
 
         src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png"
 
         width=(600px) height=(300px) alt="The Tech Academy Logo" >
 
-        <h3> <centered>Have you seen The Tech Academy's Student Orientation video?</centered></h3>
+        <h3> <center>Have you seen The Tech Academy's Student Orientation video?</center></h3>
 
         <iframe src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4" width="560" height="315" frameborder="0">
         <allowfullscreen>
