--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Replica Nike Dunks</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 		<link rel="stylesheet" href="./One_Page_CSS/styles.css">
 		<link rel="icon" type="image/x-icon" href="./images/favicon/icon_G.png">
 	</head>
