--- a/code-errors.html
+++ b/code-errors.html
@@ -15,9 +15,9 @@
 
         <p><strong>I am a bold student of The Tech Academy.</strong></p>
 
-        <p><a href="learncodinganywhere.com/">This is The Tech Academy's website.</a></p>
+        <p><a href="https://learncodinganywhere.com">This is The Tech Academy's website.</a></p>
 
-        <img style="border-style: dashed; border-width: 1px; border-color: red;"
+        <img style="border-style: dashed; border-width: 2px; border-color: red;"
 
         src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png"
 
